fixed letter-spacing on IE

--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ div{
 /*overwirte pure*/
 .pure-g{
 
-	letter-spacing: initial;
+	letter-spacing: normal;
 }
 /*elements*/
 .container{
